z-index of menu-wrap menu changed to -2 to fix bug of x disapearing

--- a/src/homepage/navbar.css
+++ b/src/homepage/navbar.css
@@ -268,7 +268,7 @@ button {
         height: 100%;
         top: 0;
         left: 0;
-        z-index: -3;
+        z-index: -2;
         visibility: hidden;
         overflow: hidden;
         display: flex;
